# MoonRays

./: .gitignore  Cargo.toml  MoonRays.sln  README.md  linecounter.py
MoonRays/: MoonRays.csproj  Program.cs
MoonRays/Config/: Engine.cs  Feature.cs
MoonRays/Logger/: Logger.cs
MoonRays/Renderer/: Vulkan.cs
MoonRays/Renderer/vk/: AppInfo.cs  CommandBuffer.cs  CommandPool.cs  DbgCallback.cs  DescriptorPool.cs  Device.cs  Drawer.cs  Framebuffers.cs  GraphicsPipeline.cs  ImageViews.cs  Instance.cs  PhysicalDevice.cs  QueueFamily.cs  Surface.cs  SwapChain.cs  SyncObjects.cs
MoonRays/Renderer/vk/GraphicsPipeline/: ColorBlend.cs  DynamicState.cs  Multisampling.cs  Pipeline.cs  Rasterizer.cs  RenderPass.cs  VertexInput.cs  ViewPort.cs
MoonRays/Renderer/vk/Shader/: Loader.cs  Module.cs  Stage.cs
MoonRays/Shaders/: compile_glsl_to_spirv.cmd  compile_glsl_to_spirv.sh
MoonRays/Tools/: ListUtils.cs  NativeType.cs
MoonRays/UI/dev/: ImGui.cs  ImGuiAPI.cs  ImGuiBinding.cs  ImGuiEnums.cs  ImGuiStructures.cs
MoonRays/Window/: Window.cs
shaders/: basevert.glsl
src/: main.rs  tools.rs
src/base/: baseinfolog.rs  directoryinit.rs  sysinfo.rs
src/hardwaretools/: canrunchecker.rs  hwinfoget.rs
src/output/logger/: logger.rs
src/render/: glslvertex.rs  render.rs  spirv_compiler.rs
src/render/vk/: baseshapes.rs  vkbuffer.rs  vkcommand.rs  vkdebugger.rs  vkdestoryer.rs  vkdrawer.rs  vkframebuffer.rs  vkmain.rs  vkpipeline.rs  vkpipline.rs  vksemaphores.rs  vkshader.rs  vksurface.rs  vkswapchain.rs  vktexture.rs  vkwindow.rs
test/: CREDITS.txt
