[package]
name = "MoonRaysEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
log = "0.4.20"
log4rs = "1.2.0"
sysinfo = "0.30.2"
systemstat = "0.2.3"

# 对于苹果设备使用molten，但代价是更久的build耗时
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
ash-molten = "0.16.0"